// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> is rendered correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 0;
  width: 100%;
  height: 3rem;
  border: 0 solid transparent;
  border-right: 1px solid transparent;
  color: #f3f6ff;
  background-color: transparent;
  font-size: 3rem;
  line-height: 3rem;
  cursor: pointer;
}

.c0:focus-within {
  -webkit-animation: caret-pulse 1.5s cubic-bezier(.215,.61,.355,1) forwards infinite;
  animation: caret-pulse 1.5s cubic-bezier(.215,.61,.355,1) forwards infinite;
}

.c0::selection {
  background-color: transparent;
}

.c1 {
  margin: 0;
  padding: 0;
  width: 0;
  height: 0;
  border: 0;
}

.c1:invalid {
  box-shadow: none;
}

<label
  className="c0"
>
  
  <input
    className="c1"
    disabled={true}
    onInput={[Function]}
    type="number"
    value=""
  />
</label>
`;

exports[`<Input /> is rendered correctly 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 0;
  width: 100%;
  height: 3rem;
  border: 0 solid transparent;
  border-right: 1px solid transparent;
  color: #f3f6ff;
  background-color: transparent;
  font-size: 3rem;
  line-height: 3rem;
  cursor: pointer;
}

.c0:focus-within {
  -webkit-animation: caret-pulse 1.5s cubic-bezier(.215,.61,.355,1) forwards infinite;
  animation: caret-pulse 1.5s cubic-bezier(.215,.61,.355,1) forwards infinite;
}

.c0::selection {
  background-color: transparent;
}

.c1 {
  margin: 0;
  padding: 0;
  width: 0;
  height: 0;
  border: 0;
}

.c1:invalid {
  box-shadow: none;
}

<label
  className="c0"
>
  
  <input
    className="c1"
    disabled={false}
    onInput={[Function]}
    type="number"
    value=""
  />
</label>
`;

exports[`<Input /> is rendered correctly 3`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 0;
  width: 100%;
  height: 3rem;
  border: 0 solid transparent;
  border-right: 1px solid transparent;
  color: #f3f6ff;
  background-color: transparent;
  font-size: 3rem;
  line-height: 3rem;
  cursor: pointer;
}

.c0:focus-within {
  -webkit-animation: caret-pulse 1.5s cubic-bezier(.215,.61,.355,1) forwards infinite;
  animation: caret-pulse 1.5s cubic-bezier(.215,.61,.355,1) forwards infinite;
}

.c0::selection {
  background-color: transparent;
}

.c1 {
  margin: 0;
  padding: 0;
  width: 0;
  height: 0;
  border: 0;
}

.c1:invalid {
  box-shadow: none;
}

<label
  className="c0"
>
  2020
  <input
    className="c1"
    disabled={true}
    onInput={[Function]}
    type="number"
    value="2020"
  />
</label>
`;

exports[`<Input /> is rendered correctly 4`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 0;
  width: 100%;
  height: 3rem;
  border: 0 solid transparent;
  border-right: 1px solid transparent;
  color: #f3f6ff;
  background-color: transparent;
  font-size: 3rem;
  line-height: 3rem;
  cursor: pointer;
}

.c0:focus-within {
  -webkit-animation: caret-pulse 1.5s cubic-bezier(.215,.61,.355,1) forwards infinite;
  animation: caret-pulse 1.5s cubic-bezier(.215,.61,.355,1) forwards infinite;
}

.c0::selection {
  background-color: transparent;
}

.c1 {
  margin: 0;
  padding: 0;
  width: 0;
  height: 0;
  border: 0;
}

.c1:invalid {
  box-shadow: none;
}

<label
  className="c0"
>
  2020
  <input
    className="c1"
    disabled={false}
    onInput={[Function]}
    type="number"
    value="2020"
  />
</label>
`;
